# rustfy

./: AGENTS.md  Cargo.toml  README.md
scripts/: bump-version.sh
src/: config.rs  main.rs  ntfy.rs
