[package]
name = "rustfy"
version = "0.1.22"
edition = "2024"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk-pixbuf = "0.18"
libappindicator = "0.9"
rich_rust = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
curl = "0.4"
notify-rust = "4"
chrono = "0.4"
sha2 = "0.10"
